5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1764_1183.log
== TEST (2019-05-29 19:12:04) 
-- CODE:
from numpy impor *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
print(negativo)
print(positivo)
	
-- ERROR:
File "XXXX", line 1
    from numpy impor *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:12:25) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
print(negativo)
print(positivo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:14:47) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:54) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = one(positivo, dtype=int)
j = 0
while(vetor[i]>=0):
	novovetor[j] = vetor[i]
	j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:18:14) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = ones(positivo, dtype=int)
j = 0
while(vetor[i]>=0):
	novovetor[j] = vetor[i]
	j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:19:03) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = ones(positivo, dtype=int)
j = 0
k=0
while(vetor[k]>=0):
	novovetor[j] = vetor[i]
	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:25) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = ones(positivo, dtype=int)
j = 0
k=0
while(vetor[k]<size(vetor)):
	if(vetoir[k]>=0):
		novovetor[j] = vetor[i]
	else:
		nada
	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:50) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = ones(positivo, dtype=int)
j = 0
k=0
while(vetor[k]<size(vetor)):
	if(vetor[k]>=0):
		novovetor[j] = vetor[i]
	else:
		nada
	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:27) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = ones(positivo, dtype=int)
j = 0
k=0
while(vetor[k]<size(vetor)):
	if(vetor[k]>=0):
		novovetor[j] = vetor[i]

	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:17) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = (positivo, dtype=int)
j = 0

while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
File "XXXX", line 15
    novovetor = (positivo, dtype=int)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:43) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0

while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:36) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

	j = j +1
	k = k +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:57) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

	j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:34) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:50) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	print(i)
	print(k)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:35:11) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	print(i)
	print(j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:18) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<size(vetor)):
	print("i",i)
	print("j",j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:38:22) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = []
j = 0
i = 0
while(vetor[i]<=size(vetor)):
	print("i",i)
	print("j",j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:54) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange[positivo]
j = 0
i = 0
while(vetor[i]<=size(vetor)):
	print("i",i)
	print("j",j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:18) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<=size(vetor)):
	print("i",i)
	print("j",j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:39) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	print("i",i)
	print("j",j)
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]

		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:56:33) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:56:43) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:57:53) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<=size(vetor)):
	
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:58:49) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:59:06) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:00:28) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor(i)<size(vetor)):
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print("j",j)
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:04:36) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(vetor[i]<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:07:36) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(i<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:08:09) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(i<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		print("i",i)
		print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- EXECUTION TIME:
0.386143
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
10
1
i 10
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
2
3
i 0
2
i 2
3
i 4
5
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
2
4
i 1
18
i 2
32
i 3
14
i 4
25
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:21:07) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(i<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		#print("i",i)
		#print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- EXECUTION TIME:
0.337091
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
10
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
2
3
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
2
4
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:21:09) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
print(negativo)
print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(i<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		#print("i",i)
		#print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:21:43) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
negativo = 0
positivo = 0
i = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		negativo = negativo + 1
	else:
		positivo = positivo +1
	i = i + 1
#print(negativo)
#print(positivo)

novovetor = arange(positivo)
j = 0
i = 0
while(i<size(vetor)):
	
	if(vetor[i]>=0):
		novovetor[j] = vetor[i]
		#print("i",i)
		#print(vetor[i])
		j = j +1
	i = i +1
	
print(novovetor)
-- EXECUTION TIME:
0.451793
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
